--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0D9488" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-    <title>Kotori</title>
-    <meta name="description" content="Speak a short update. Kotori turns it into clear, searchable notes you can revisit and share—on your terms." />
-    <meta name="keywords" content="voice journal, daily notes, parent journaling" />
+    <title>Kotori - Hands-free journaling made simple</title>
+    <meta name="description" content="Kotori is a hands-free voice journaling app with private, consent-based sharing and an autism-friendly, low-stim design. Capture notes quickly and export visit-ready summaries." />
+    <meta name="keywords" content="voice journaling app, private journaling, autism-friendly journaling, caregiver journaling, multi-language summaries, parent journaling" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Kotori — Voice journaling for parents" />
-    <meta property="og:description" content="Speak a short update. Kotori turns it into clear, searchable notes you can revisit and share—on your terms." />
+    <meta property="og:title" content="Kotori - Hands-free journaling made simple" />
+    <meta property="og:description" content="Kotori is a hands-free voice journaling app with private, consent-based sharing and an autism-friendly, low-stim design. Capture notes quickly and export visit-ready summaries." />
+    <link rel="canonical" href="https://kotori.io/" />
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
     <meta name="twitter:card" content="summary_large_image" />
 
     <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Nunito:wght@500;600;700&display=swap" rel="stylesheet" />
 
     <!-- Tailwind via CDN for simplicity -->
