SEO: replace em dash in titles; switch to colon; update README with project-specific docs

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0D9488" />
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-    <title>Kotori - Hands-free journaling made simple</title>
+    <title>Kotori: Hands-free journaling made simple</title>
     <meta name="description" content="Kotori is a hands-free voice journaling app with private, consent-based sharing and an autism-friendly, low-stim design. Capture notes quickly and export visit-ready summaries." />
     <meta name="keywords" content="voice journaling app, private journaling, autism-friendly journaling, caregiver journaling, multi-language summaries, parent journaling" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Kotori - Hands-free journaling made simple" />
+    <meta property="og:title" content="Kotori: Hands-free journaling made simple" />
     <meta property="og:description" content="Kotori is a hands-free voice journaling app with private, consent-based sharing and an autism-friendly, low-stim design. Capture notes quickly and export visit-ready summaries." />
     <link rel="canonical" href="https://kotori.io/" />
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
